# gravisim

./: .gitignore  README  grav_0.2.1.tar.bz2  grav_0.2.tar.bz2
0.1/: Makefile  camera.h  main.cpp
0.1/dlib/directed_graph/: directed_graph_kernel_abstract.h
0.1/dlib/geometry/: rectangle.h
0.1/dlib/gui_core/: gui_core_kernel_2.h
0.1/dlib/gui_widgets/: base_widgets_abstract.h  drawable.cpp  style_abstract.h
0.1/dlib/svm/: krls_abstract.h
0.1/dlib/threads/: threaded_object_extension.h
0.2/: Makefile  camera.cpp  camera.h  coord.h  force.h  grav  gravenv.cpp  gravenv.h  main.cpp  mcoord.h  planet.h  planets.h
0.2.1/: Makefile  camera.cpp  camera.h  clusterbuild.cpp  grav  gravenv.cpp  main.cpp  planet.h  planets.h
0.2.1/dlib/gui_core/: gui_core_kernel_1.cpp  gui_core_kernel_2.cpp
0.2.1/dlib/queue/: queue_sort_1.h
0.2.1/dlib/svm/: krls.h
0.2.1/dlib/test/: geometry.cpp  queue.cpp  (+1 more)
0.2/dlib/: algs.h  svm.h
dev/: Makefile  camera.cpp  grav  gravcalc.cpp  gravcalc.h  main.cpp  oldmain.cpp  planet.h  planetsim.cpp  planetsim.h
src/: .main.cpp.swp  Makefile  bench  camera.cpp  camera.h  clusterbuild.h  force.h  grav  gravenv.cpp  gravenv.h  main.cpp  mcoord.h  planet.cpp  planet.h  planets.h
src/dlib/: CMakeLists.txt  README.txt  assert.h  dlib_include_path_tutorial.txt  matrix.h  member_function_pointer.h  serialize.h
testing/: Makefile  camera.h  grav  main.cpp  main.cpp~
testing/dlib/: is_kind.h
tmp/: Makefile.am  config.h.in  config.status  configure  configure.ac  coord.h  grav  main.cpp
tmp/autom4te.cache/: output.0  requests  traces.1
tmp/dlib/: serialize.h  threads.h
tmp/dlib/gui_widgets/: style.cpp
tmp/dlib/matrix/: matrix_utilities_abstract.h
tmp/dlib/threads/: threads_kernel_abstract.h
(+101 files in other folders)
